tests/ui/issues/issue-48364.stderr
error[E0308]: mismatched types
  --> $DIR/issue-48364.rs:2:21
   |
LL |     b"".starts_with(stringify!(foo))
   |         ----------- ^^^^^^^^^^^^^^^ expected `&[u8]`, found `&str`
   |         |
   |         arguments to this method are incorrect
   |
   = note: expected reference `&[u8]`
              found reference `&'static str`
note: method defined here
  --> $SRC_DIR/core/src/slice/mod.rs:LL:COL
   = note: this error originates in the macro `stringify` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
